fishes/kapp/resources-dev.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("helpers.star","configfile","load_configfile")
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: fishes-app
  labels:
    app: fishes-app
    group: micro-pet
spec:
  replicas: #@ data.values.service.replicas
  selector:
    matchLabels:
      app: fishes-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: fishes-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: #@ configfile("fishes-config", "service_config.properties")
            items:
            - key: service_config.properties
              path: config.properties
      containers:
        - name: fishes
          image: #@ data.values.registry.server + "/micropet-fishes:" +data.values.service.version
          imagePullPolicy: Always
          ports:
            - name: fishes
              containerPort: #@ data.values.service.port
          volumeMounts:
            - name: config-volume
              mountPath: /config/
          livenessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /liveness
            initialDelaySeconds: 10
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /readiness
            initialDelaySeconds: 10
            periodSeconds: 2
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fishes-service
  labels:
    app: fishes-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: http-fishes
      port: #@ data.values.service.port
  selector:
    app: fishes-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: fishes-ingress
spec:
  rules:
    - host: #@ data.values.service.virtual_host
      http:
        paths:
          - path: /fishes
            backend:
              serviceName: fishes-service
              servicePort: #@ data.values.service.port
